--- a/frontend/src/components/layout/Navbar.css
+++ b/frontend/src/components/layout/Navbar.css
@@ -9,6 +9,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  width: 100%;
 }
 .navbar-brand {
   font-weight: 700;
